[package]
name = "dex-interface"
version = "0.1.0"
edition = "2021"
description = "Defines the interface for the dex adaptors."

[dependencies]
scrypto = { version = "1.3.0" }
sbor = { version = "1.3.0" }
radix-engine = { version = "1.3.0" }
radix-common = { version = "1.3.0" }
scrypto-interface = { path = "../scrypto-interface" }
uuid = {version = "1.15", features = ["v4", "js"]}

[features]
default = [
    "trait",
    "scrypto-stubs",
    "scrypto-test-stubs",
    "manifest-builder-stubs",
]
trait = []
scrypto-stubs = []
scrypto-test-stubs = []
manifest-builder-stubs = []

[lib]
crate-type = ["cdylib", "lib"]